plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'idea'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'javax.validation:validation-api:2.0.1.Final'


    runtimeOnly 'com.h2database:h2:2.1.214'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor('org.projectlombok:lombok')

    implementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.assertj:assertj-core:3.23.1'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation 'org.mockito:mockito-junit-jupiter:4.6.1'
    implementation 'org.mockito:mockito-core:4.6.1'

    testCompileOnly('org.projectlombok:lombok')

}

group = 'org.liga'
version = '1.0-TaskTracker'
description = 'homework-2'
java.sourceCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
test {
    useJUnitPlatform()
}
